<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titleStatus">Status Update</string>
    <string name="hintText">please enter 140 characters ^>^ </string>
    <string name="buttonUpdate">Update</string>
    <string name="initialCount">000</string>
    <string name="sumeraryApiRoot">url of root api for your service</string>
    <string name="summaryUsername">please enter your user name</string>
    <string name="summaryPassword">please enter your password</string>
    <string name="titleApiRoot">api root</string>
    <string name="titlePassword">password</string>
    <string name="titleUsername">username</string>
    <string name="titlePrefs">Prefs</string>
    <string name="titleServiceStart">Start</string>
    <string name="titleServiceStop">Stop</string>
    <string name="defaultApiRoot">http://yamba.marakana.com/api</string>
	<string name="titleTimeline">Timeline</string>
	<string name="debug">debug</string>
	<string name="titlePurge">Purge</string>
	<string name="msgAllDataPurge">all messages delete</string>
	<string name="msgSetupPrefs">please setup account first</string>
	<string name="updatePermissionDescription">permission for updating timeline</string>
		
</resources>
