<?xml version="1.0" encoding="utf-8"?>

<!-- Main layout of status activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <!-- Tittle text view -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/titleStatus"
        android:textSize="30sp" />

    <!-- text counter text view -->

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/initialCount" />
    <!-- status edit text -->

    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:hint="@string/hintText"
		android:background="#cfff"/>
    <!-- update button -->

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUpdate"
        android:textSize="20sp" 
        />
</LinearLayout>